@@ -64,7 +64,7 @@
 		<dependency>
 			<groupId>com.google.inject</groupId>
 			<artifactId>guice</artifactId>
-			<version>3.0</version>
+			<version>4.2.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.google.inject.extensions/guice-assistedinject -->
 		<dependency>
@@ -221,21 +221,19 @@
 			<version>0.2.0-RC2</version>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback.contrib</groupId>
-			<artifactId>logback-jackson</artifactId>
-			<version>0.1.5</version>
-		</dependency>
-
-		<!-- ch.qos.logback.contrib.json.classic.JsonLayout -->
-		<dependency>
-			<groupId>ch.qos.logback.contrib</groupId>
-			<artifactId>logback-json-classic</artifactId>
-			<version>0.1.5</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
 		</dependency>
 		<dependency>
 			<groupId>net.logstash.logback</groupId>
 			<artifactId>logstash-logback-encoder</artifactId>
-			<version>6.3</version>
+			<version>6.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.25</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -275,26 +273,23 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
-					<forkCount>0</forkCount>
 					<argLine>
 						--illegal-access=warn
 					</argLine>
+					<argLine>@{argLine} -Xmx1024m -XX:MaxPermSize=256m</argLine>
+					<includes>
+						<include>**/*Spec.java</include>
+						<include>**/*Test.java</include>
+					</includes>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.4</version>
+				<version>0.8.5</version>
 				<configuration>
 					<destFile>${basedir}/target/coverage-reports/jacoco-unit.exec</destFile>
 					<dataFile>${basedir}/target/coverage-reports/jacoco-unit.exec</dataFile>
-					<excludes>
-					<exclude>**/common/**</exclude>
-					<exclude>**/router/**</exclude>
-					<exclude>**/Reverse*/**</exclude>
-					<exclude>**/routes.*</exclude>
-						<exclude>**/routes$javascript.**</exclude>
-				</excludes>
 				</configuration>
 				<executions>
 					<execution>
@@ -309,49 +304,6 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
-					</execution>
-					<execution>
-						<id>default-check</id>
-						<goals>
-							<goal>check</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<rule>
-									<element>BUNDLE</element>
-									<limits>
-									    <limit>
-											<counter>COMPLEXITY</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.40</minimum>
-									   </limit>
-										<limit>
-											<counter>INSTRUCTION</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.40</minimum>
-										</limit>
-										<!--<limit>
-											<counter>CLASS</counter>
-											<value>MISSEDCOUNT</value>
-											<maximum>0</maximum>
-										</limit>-->
-									</limits>
-								</rule>
-								<rule>
-									<element>CLASS</element>
-									<excludes>
-										<include>*Controller</include>
-									</excludes>
-									<limits>
-										<!-- <limit>
-											<counter>LINE</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>60%</minimum>
-										</limit> -->
-									</limits>
-								</rule>
-							</rules>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
